# MinIng

./: Cargo.toml  LICENSE  README.md  TestProgram.txt  build.rs  grammar.txt
src/: TS.rs  ast.rs  error.rs  grammar.lalrpop  grammar.rs  grammar.txt  lexer.rs  main.rs  tests (1).rs  tests.rs
src/Lexer/: error.rs  lexer.rs
src/Parser/: ast.rs  grammar.lalrpop  grammar.txt  grammar_quad.lalrpop  mod.rs
src/Semantic/: error.rs  mod.rs  quadruplets.rs  semantic_analyzer.rs  semantic_rules.rs  ts.rs  type_checker.rs
src/Test/: mod.rs  test2.rs  tests.rs
src/codegen/: code_generator.rs  error.rs  generator.rs  mod.rs  output.txt  tests.rs
