[package]
name = "MinING_compiler_project"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
logos= "0.15.0"
once_cell = "1.20.2"

thiserror = "2.0.5"
lalrpop-util = { version = "0.22.0", features = ["lexer", "unicode"] }
parking_lot = "0.12"

tempfile = "3.3"

lazy_static = "1.4" 

cranelift = "0.93"
cranelift-module = "0.93"
cranelift-jit = "0.93"
cranelift-native = "0.93"
cranelift-codegen = "0.93"


regex = "1"

[build-dependencies]
lalrpop = "0.22.0"