[package]
name = "MinING_compiler_project"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
logos= "0.15.0"
once_cell = "1.20.2"
lazy_static = "1.4.0"
thiserror = "2.0.5"
lalrpop-util = { version = "0.22.0", features = ["lexer", "unicode"] }
parking_lot = "0.12"
colored = "2.2.0"
regex = "1"

[build-dependencies]
lalrpop = "0.22.0"